[feat, fix] stretching content 제작

--- a/client/src/components/stretching/index.scss
+++ b/client/src/components/stretching/index.scss
@@ -1,11 +1,12 @@
 @import '../../style/var.scss';
 
 .stretching {
+    background: #39473e;
     display: flex;
     gap: 0.5vw;
 
     .stretching-steps-wrapper {
-        width: 15vw - 2vw;
+        width: 14vw - 2vw;
         padding: 1vw;
         display: flex;
         flex-direction: column;
@@ -13,7 +14,7 @@
 
         .stretching-step {
             width: 100%;
-            height: 10vw;
+            height: 9vw;
             border-radius: 0.5vw;
             overflow: hidden;
             background-size: cover;
@@ -40,6 +41,11 @@
                 height: 100%; 
                 position: absolute;
                 background-color: #00000050;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                font-size: 3vw;
+                color: $GN-2;
             }
 
             &#current-stretching {
@@ -54,17 +60,27 @@
         $webcam-gap: 2vh;
         $webcam-height: 90vh;
 
-        width: calc(100% - 15vw - $webcam-padding-top - $webcam-padding-left);
+        // width: calc(100% - 15vw - $webcam-padding-top - $webcam-padding-left);
+        flex-grow: 1;
         height: 100vh - $webcam-padding-top * 2;
-        display: flex;
-        flex-direction: column;
-        gap: $webcam-gap;
         padding: $webcam-padding-top $webcam-padding-left;
-        position: relative;
+        display: flex;
+        justify-content: center;
+        align-items: center;
 
         .stretching-webcam-wrapper {
             width: 100%;
-            height: $webcam-height;
+            max-width: 1100px;
+            max-height: 100%;
+            gap: $webcam-gap;
+            display: flex;
+            flex-direction: column;
+            position: relative;
+        }
+
+        .stretching-webcam {
+            width: 100%;
+            // height: $webcam-height;
             border-radius: 1vw;
             overflow: hidden;
 
@@ -78,11 +94,17 @@
             flex-grow: 1;
 
             .second {
+                width: 5vw; height: 5vw;
+                line-height: 4.7vw;
+                border-radius: 50%;
                 position: absolute;
                 bottom: 30vh;
                 right: 4vw;
                 font-weight: 600;
-                font-size: 2vw;
+                font-size: 2.5vw;
+                color: $IV;
+                background-color: #00000050;
+                border: 0.4vw solid $IV;
             }
 
             .stretching-alert-text {
@@ -97,7 +119,7 @@
                 color: $IV;
 
                 &#incorrect { background-color: $RE; }
-                &#correct { background-color: $GN-2; }
+                &#correct { background-color: $GN-3; }
             }
 
             img {
@@ -108,8 +130,8 @@
             }
 
             .curr-stretching-description {
-                font-size: 1.5vw;
-                font-weight: 600;
+                font-size: 1.4vw;
+                font-weight: 500;
             }
 
             .curr-stretching-info {
